--- a/olympic-games/Untitled.ipynb
+++ b/olympic-games/Untitled.ipynb
@@ -2,13 +2,132 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Sport</th>\n",
+       "      <th>Discipline</th>\n",
+       "      <th>Athlete</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Event</th>\n",
+       "      <th>Medal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athens</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Swimming</td>\n",
+       "      <td>HAJOS, Alfred</td>\n",
+       "      <td>HUN</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>100M Freestyle</td>\n",
+       "      <td>Gold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athens</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Swimming</td>\n",
+       "      <td>HERSCHMANN, Otto</td>\n",
+       "      <td>AUT</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>100M Freestyle</td>\n",
+       "      <td>Silver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athens</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Swimming</td>\n",
+       "      <td>DRIVAS, Dimitrios</td>\n",
+       "      <td>GRE</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>100M Freestyle For Sailors</td>\n",
+       "      <td>Bronze</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athens</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Swimming</td>\n",
+       "      <td>MALOKINIS, Ioannis</td>\n",
+       "      <td>GRE</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>100M Freestyle For Sailors</td>\n",
+       "      <td>Gold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athens</td>\n",
+       "      <td>Aquatics</td>\n",
+       "      <td>Swimming</td>\n",
+       "      <td>CHASAPIS, Spiridon</td>\n",
+       "      <td>GRE</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>100M Freestyle For Sailors</td>\n",
+       "      <td>Silver</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year    City     Sport Discipline             Athlete Country Gender  \\\n",
+       "0  1896  Athens  Aquatics   Swimming       HAJOS, Alfred     HUN    Men   \n",
+       "1  1896  Athens  Aquatics   Swimming    HERSCHMANN, Otto     AUT    Men   \n",
+       "2  1896  Athens  Aquatics   Swimming   DRIVAS, Dimitrios     GRE    Men   \n",
+       "3  1896  Athens  Aquatics   Swimming  MALOKINIS, Ioannis     GRE    Men   \n",
+       "4  1896  Athens  Aquatics   Swimming  CHASAPIS, Spiridon     GRE    Men   \n",
+       "\n",
+       "                        Event   Medal  \n",
+       "0              100M Freestyle    Gold  \n",
+       "1              100M Freestyle  Silver  \n",
+       "2  100M Freestyle For Sailors  Bronze  \n",
+       "3  100M Freestyle For Sailors    Gold  \n",
+       "4  100M Freestyle For Sailors  Silver  "
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('summer.csv')\n"
+    "df = pd.read_csv('summer.csv')\n",
+    "df.head()"
    ]
   },
   {
@@ -163,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +328,7 @@
        "PHELPS, Michael     22"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,6 +339,216 @@
     "agg = cnt.groupby('Athlete').agg({'Medal': sum})\n",
     "\n",
     "agg.nlargest(1, 'Medal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Medal</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>USA</th>\n",
+       "      <td>1377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>URS</th>\n",
+       "      <td>573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CHN</th>\n",
+       "      <td>537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AUS</th>\n",
+       "      <td>493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GER</th>\n",
+       "      <td>389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GDR</th>\n",
+       "      <td>369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RUS</th>\n",
+       "      <td>359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NED</th>\n",
+       "      <td>356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ROU</th>\n",
+       "      <td>335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GBR</th>\n",
+       "      <td>308</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Medal\n",
+       "Country       \n",
+       "USA       1377\n",
+       "URS        573\n",
+       "CHN        537\n",
+       "AUS        493\n",
+       "GER        389\n",
+       "GDR        369\n",
+       "RUS        359\n",
+       "NED        356\n",
+       "ROU        335\n",
+       "GBR        308"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "medals_by_country = female_medalists.groupby(['Country']).count()\n",
+    "agg = medals_by_country.groupby('Country').agg({'Medal': sum})\n",
+    "\n",
+    "agg.nlargest(10, 'Medal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Medal</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>USA</th>\n",
+       "      <td>3208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>URS</th>\n",
+       "      <td>1476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GBR</th>\n",
+       "      <td>1412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FRA</th>\n",
+       "      <td>1254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ITA</th>\n",
+       "      <td>1161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SWE</th>\n",
+       "      <td>953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GER</th>\n",
+       "      <td>916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HUN</th>\n",
+       "      <td>834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AUS</th>\n",
+       "      <td>696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>JPN</th>\n",
+       "      <td>525</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Medal\n",
+       "Country       \n",
+       "USA       3208\n",
+       "URS       1476\n",
+       "GBR       1412\n",
+       "FRA       1254\n",
+       "ITA       1161\n",
+       "SWE        953\n",
+       "GER        916\n",
+       "HUN        834\n",
+       "AUS        696\n",
+       "JPN        525"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "medals_by_country = male_medalists.groupby(['Country']).count()\n",
+    "agg = medals_by_country.groupby('Country').agg({'Medal': sum})\n",
+    "\n",
+    "agg.nlargest(10, 'Medal')"
    ]
   }
  ],
